--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div class="tool-card">
                 <h2>Image Converter</h2>
                 <p>Convert your images between various formats like JPG, PNG, WEBP, and more with just a few clicks.</p>
-                <button class="btn" onclick="redirectToTool('Image Converter')">Use Tool</button>
+                <a href="image-converter.html" class="tool-button">Use Tool</a>
             </div>
 
             <!-- Tool Card 2: Image Compressor -->
