--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
 
         body {
-            background-color: #d35400;
+            background-color: #1E1E2F;
             color: #EAEAEA;
             line-height: 1.6;
         }
@@ -37,43 +37,6 @@
             color: #EAEAEA;
             font-size: 1.1rem;
             opacity: 0.9;
-        }
-
-        /* Navigation Styles */
-        nav {
-            background-color: #1E1E2F;
-            padding: 1rem 0;
-            position: sticky;
-            top: 0;
-            z-index: 100;
-        }
-
-        .nav-container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 1.5rem;
-            display: flex;
-            justify-content: center;
-        }
-
-        .nav-links {
-            display: flex;
-            list-style: none;
-            gap: 2rem;
-        }
-
-        .nav-links a {
-            color: #EAEAEA;
-            text-decoration: none;
-            font-weight: 500;
-            padding: 0.5rem 1rem;
-            border-radius: 5px;
-            transition: all 0.3s ease;
-        }
-
-        .nav-links a:hover {
-            background-color: #FFD700;
-            color: #1E1E2F;
         }
 
         /* Main Content Styles */
@@ -140,32 +103,6 @@
             background-color: #E6C200;
         }
 
-        /* Contact Section */
-        .contact-section {
-            background-color: #3A3D5B;
-            padding: 2rem;
-            border-radius: 8px;
-            margin-top: 2rem;
-            text-align: center;
-        }
-
-        .contact-section h2 {
-            color: #FFD700;
-            margin-bottom: 1rem;
-        }
-
-        .contact-email {
-            color: #FFD700;
-            font-weight: bold;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-
-        .contact-email:hover {
-            color: #E6C200;
-            text-decoration: underline;
-        }
-
         /* Footer Styles */
         footer {
             background-color: #2B2D42;
@@ -188,18 +125,6 @@
             header h1 {
                 font-size: 2rem;
             }
-
-            .nav-links {
-                gap: 1rem;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .nav-links {
-                flex-direction: column;
-                align-items: center;
-                gap: 0.5rem;
-            }
         }
     </style>
 </head>
@@ -209,23 +134,13 @@
         <p>Multi Tool Hub - Your one-stop solution for all utility needs</p>
     </header>
 
-    <nav>
-        <div class="nav-container">
-            <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#tools">Tools</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="container" id="home">
-        <div class="tools-grid" id="tools">
+    <div class="container">
+        <div class="tools-grid">
             <!-- Tool Card 1: Image Converter -->
             <div class="tool-card">
                 <h2>Image Converter</h2>
                 <p>Convert your images between various formats like JPG, PNG, WEBP, and more with just a few clicks.</p>
-                <a href="image-converter.html" class="tool-button">Use Tool</a>
+                <button class="btn" onclick="redirectToTool('Image Converter')">Use Tool</button>
             </div>
 
             <!-- Tool Card 2: Image Compressor -->
@@ -277,13 +192,6 @@
                 <button class="btn" onclick="redirectToTool('Audio Trim')">Use Tool</button>
             </div>
         </div>
-
-        <!-- Contact Section -->
-        <div class="contact-section" id="contact">
-            <h2>Contact Us</h2>
-            <p>Have questions or feedback? Reach out to us via email:</p>
-            <a href="mailto:docuninja1@gmail.com" class="contact-email">docuninja1@gmail.com</a>
-        </div>
     </div>
 
     <footer>
@@ -296,16 +204,6 @@
             // In a real implementation, you would navigate to the tool page:
             // window.location.href = toolName.toLowerCase().replace(' ', '-') + '.html';
         }
-
-        // Smooth scrolling for navigation links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            });
-        });
     </script>
 </body>
 </html>
