--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
         <p>Multi Tool Hub - Your one-stop solution for all utility needs</p>
     </header>
 
-    <div class="container">
-        <div class="tools-grid">
-            <!-- Tool Card 1: Image Converter -->
-            <div class="tool-card">
-                <h2>Image Converter</h2>
-                <p>Convert your images between various formats like JPG, PNG, WEBP, and more with just a few clicks.</p>
-                <button class="btn" onclick="redirectToTool('Image Converter')">Use Tool</button>
-            </div>
+    <div class="tool-card">
+    <h2>Image Converter</h2>
+    <p>Convert your images between various formats like JPG, PNG, WEBP, and more with just a few clicks.</p>
+    <a href="image-converter.html">
+        <button class="btn">Use Tool</button>
+    </a>
+</div>
+
 
             <!-- Tool Card 2: Image Compressor -->
             <div class="tool-card">
