--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                 </div>
                 <h3>Image Converter</h3>
                 <p>Convert between JPG, PNG, WEBP, GIF and more formats with ease.</p>
-                <a href="#" class="btn">Use Tool</a>
+                <a href="image-converter.html" class="btn">Use Tool</a>
             </div>
 
             <div class="tool-card">
